Fix: fix overflow bug.
 fix overflow bug.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -128,8 +128,8 @@
 
 .center {
 	position: absolute;
-	max-width: 100%;
-	min-height: 100%;
+	max-width: 100%; 
+	height: auto;
 	left: 200px;
 	top: 60px;
 	padding: 0;
@@ -137,8 +137,7 @@
 	padding: 0 10px;
 	padding-top: 10px;
 	z-index: 0;
+	overflow: visible;
 	overflow-x: hidden;
-	/* overflow-y: visible; */
 	/* border: 1px solid red; *//* debugger */
-	
 }
